# stock-market

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile.acceptance  Dockerfile.web.acceptance  README.md  alembic.ini  check_routes.py  docker-compose.acceptance.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_api.py  test_direct.py  test_final.py  test_local.py  vitest.config.ts
.github/workflows/: ci.yml  dev-health.yml
alembic/: env.py
alembic/versions/: 0001_core_schema.py  0002_news_sentiment.py  0003_generated_reports.py  0004_task_runs.py  0005_fundamentals_watchlists.py  0006_task_run_celery_id.py  0007_portfolios.py  0008_alert_triggers_report_task_run.py  0009_market_indicators.py  0010_intraday_minute_cache_entries.py  0011_research_source_notes.py  0012_research_briefs.py  0013_market_daily_evidence_events.py  0014_instrument_universe_sync.py  0015_research_evidence_backfills.py  0016_daily_bar_provenance.py  0017_official_disclosures.py  0018_official_disclosure_documents.py  0019_official_disclosure_monitoring.py  0020_research_shortlists.py  0021_research_shortlist_outcomes.py  0022_research_shortlist_task_run.py  0023_intraday_cache_market_identity.py  (+5 more)
apps/api/: main.py
scripts/: a_share_live_acceptance.py  dev_health_check.py  import_market_indicator_seeds.py  mvp_acceptance.py  provider_readiness.py  refresh_fred_macro_indicators.py  refresh_world_bank_macro_indicators.py  task_run_health.py  unify_api_url.py  validate_china_macro_sources.py  verify_celery.py
(+1487 files in other folders)
